--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Incomplete: Errors (404, others), Redirection for not logined users from LoginRequiredMixin.
+
 PROJECT TASK:
 
 You’ve been asked by a restaurant owner to build an application that will help keep track of how much food they have throughout the day. The owner starts the day with:
