--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Incomplete: Errors (404, others), Redirection for not logined users from LoginRequiredMixin.
+Incomplete: Errors (404, others), Redirection for not logined users from LoginRequiredMixin, Optimization.
 
 PROJECT TASK:
 
