--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+login: ton
+password: 123
+
 Incomplete: Errors (404, others), Redirection for not logined users from LoginRequiredMixin, Optimization.
 
 PROJECT TASK:
