--- a/README
+++ b/README
@@ -1,7 +1,11 @@
 login: ton
 password: 123
 
-Incomplete: Errors (404, others), Redirection for not logined users from LoginRequiredMixin, Optimization.
+Plans: 
+-Error handlers
+-Optimization (DB requests and cash)
+-Full functionality of Menu view (with restriction to add new menu items and change recipes for not admins)
+-Improve DB - delete RecipeRequirement table and add recipe field (JSON) to MenuItem table. Would works like Purchase table.
 
 PROJECT TASK:
 
