--- a/README
+++ b/README
@@ -5,7 +5,8 @@ Plans:
 -Error handlers
 -Optimization (DB requests and cash)
 -Full functionality of Menu view (with restriction to add new menu items and change recipes for not admins)
--Improve DB - delete RecipeRequirement table and add recipe field (JSON) to MenuItem table. Would works like Purchase table.
+-Improve DB - delete RecipeRequirement table and add recipe field (JSON) to MenuItem table. Would works like Purchase table
+-Autofill user field in purchase form
 
 
 -------------
