--- a/README
+++ b/README
@@ -2,7 +2,7 @@ login: ton
 password: 123
 
 Plans: 
--Error handlers
+-Error handlers, try-except blocks
 -Optimization (DB requests and cash)
 -Full functionality of Menu view (with restriction to add new menu items and change recipes for not admins)
 -Improve DB - delete RecipeRequirement table and add recipe field (JSON) to MenuItem table. Would works like Purchase table
