--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Then run brauser at localhost:8000
 
 Plans: 
 -Error handlers, try-except blocks
--Optimization (DB requests and cash)
+-Optimization (DB requests and cache)
 -Full functionality of Menu view (with restriction to add new menu items and change recipes for not admins)
 -Improve DB - delete RecipeRequirement table and add recipe field (JSON) to MenuItem table. Would works like Purchase table
 -Autofill user field in purchase form
