--- a/README
+++ b/README
@@ -4,7 +4,7 @@ password: 123
 Project on DockerHub! Install Docker, then run commands:
 docker pull acidweaver/djangodelights:26.07.22
 docker run --publish 8000:8000 acidweaver/djangodelights:26.07.22
-Then run brauser at localhost:8000
+Then run browser at localhost:8000
 
 Plans: 
 -Error handlers, try-except blocks
